1. Rename Editor to Edition 2. Rename Placeholder Resolvers to Tag Resolvers